# swmailer

./: README.md  pyproject.toml
configs/: mail_config.json
src/: common_data.py  main.py
templates/: scisprint.j2
